// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditTextField /> render correctly with edit equals false 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFF",
      "borderColor": "#14213D",
      "borderRadius": 24,
      "borderWidth": 1,
      "elevation": 2,
      "flexDirection": "row",
      "height": 46,
      "marginTop": 25,
      "paddingHorizontal": 12,
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flexDirection": "row",
        "paddingHorizontal": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#14213D",
          "fontWeight": "600",
        }
      }
    >
      Celular: 
    </Text>
    <Text
      style={
        Object {
          "color": "#14213D",
        }
      }
    >
      (35) 99988-7766
    </Text>
  </View>
</View>
`;

exports[`<EditTextField /> render correctly with edit equals true 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFF",
      "borderColor": "#14213D",
      "borderRadius": 24,
      "borderWidth": 1,
      "elevation": 2,
      "flexDirection": "row",
      "height": 46,
      "marginTop": 25,
      "paddingHorizontal": 12,
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 2,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    keyboardType="phone-pad"
    placeholder="(35) 99988-7766"
    placeholderTextColor="#14213D"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#14213D",
      }
    }
    underlineColorAndroid="transparent"
  />
</View>
`;
